--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "jquery-ui": "~1.11.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
