--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "jquery-ui": "~1.12.0"
+    "jquery-ui": "~1.12.0",
+    "ngtweet": "^0.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
