--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "jquery-ui": "~1.12.0",
-    "ngtweet": "^0.6.1"
+    "ngtweet": "^0.6.1",
+    "angular-google-maps": "^2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
