--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,11 @@
     "angular-touch": "^1.4.0",
     "jquery-ui": "~1.12.0",
     "ngtweet": "^0.6.1",
-    "angular-google-maps": "^2.3.3"
+    "angular-google-maps": "^2.3.3",
+    "magnific-popup": "^1.1.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0"   
   },
   "appPath": "app",
   "moduleName": "didsBeerFestV2App",
