--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "didsbeerfestv2",
-  "private": true,
-  "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "grunt": "^1.0.1",
-    "grunt-angular-templates": "^1.0.4",
-    "grunt-concurrent": "^2.3.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-compass": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-filerev": "^2.1.2",
-    "grunt-google-cdn": "^0.4.3",
-    "grunt-jscs": "^3.0.1",
-    "grunt-karma": "*",
-    "grunt-manifest": "^0.4.4",
-    "grunt-mocha": "^1.0.2",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^2.0.2",
-    "grunt-postcss": "^0.8.0",
-    "grunt-svgmin": "^3.3.0",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^3.0.1",
-    "jit-grunt": "^0.10.0",
-    "jshint-stylish": "^2.2.0",
-    "karma": "^1.1.2",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "*",
-    "serve-static": "^1.11.1",
-    "time-grunt": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test"
-  }
+    "name": "didsbeerfestv2",
+    "private": true,
+    "devDependencies": {
+        "autoprefixer": "^6.4.0",
+        "cdnify": "^0.1.4",
+        "grunt": "^1.0.1",
+        "grunt-angular-templates": "^1.0.4",
+        "grunt-concurrent": "^2.3.0",
+        "grunt-contrib-clean": "^1.0.0",
+        "grunt-contrib-compass": "^1.0.0",
+        "grunt-contrib-concat": "^1.0.1",
+        "grunt-contrib-connect": "^1.0.2",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-cssmin": "^1.0.1",
+        "grunt-contrib-htmlmin": "^2.0.0",
+        "grunt-contrib-imagemin": "^1.0.0",
+        "grunt-contrib-jshint": "^1.0.0",
+        "grunt-contrib-uglify": "^2.0.0",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-filerev": "^2.1.2",
+        "grunt-google-cdn": "^0.4.3",
+        "grunt-jscs": "^3.0.1",
+        "grunt-karma": "*",
+        "grunt-manifest": "^0.4.4",
+        "grunt-mocha": "^1.0.2",
+        "grunt-newer": "^1.1.0",
+        "grunt-ng-annotate": "^2.0.2",
+        "grunt-postcss": "^0.8.0",
+        "grunt-svgmin": "^3.3.0",
+        "grunt-usemin": "^3.0.0",
+        "grunt-wiredep": "^3.0.1",
+        "jasmine-core": "^2.6.2",
+        "jit-grunt": "^0.10.0",
+        "jshint-stylish": "^2.2.0",
+        "karma": "^1.1.2",
+        "karma-chrome-launcher": "^1.0.1",
+        "karma-jasmine": "^1.0.2",
+        "karma-phantomjs-launcher": "*",
+        "serve-static": "^1.11.1",
+        "time-grunt": "^1.0.0"
+    },
+    "engines": {
+        "node": ">=0.10.0"
+    },
+    "scripts": {
+        "test": "grunt test"
+    }
 }
