--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "angular-google-maps": "^2.3.3",
     "magnific-popup": "^1.1.0"
   },
+  "resolutions": {
+    "angular": "~1.4.x"
+  },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
