--- a/bower.json
+++ b/bower.json
@@ -1,35 +1,35 @@
 {
-  "name": "dids-beer-fest-v2",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.4.0",
-    "bootstrap-sass-official": "^3.2.0",
-    "angular-animate": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
-    "jquery-ui": "~1.12.0",
-    "ngtweet": "^0.6.1",
-    "angular-google-maps": "^2.3.3",
-    "magnific-popup": "^1.1.0"
-  },
-  "resolutions": {
-    "angular": "~1.5.x"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.0"
-  },
-  "appPath": "app",
-  "moduleName": "didsBeerFestV2App",
-  "overrides": {
-    "bootstrap": {
-      "main": [
-        "less/bootstrap.less",
-        "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js"
-      ]
+    "name": "dids-beer-fest-v2",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular": "^1.4.0",
+        "bootstrap-sass-official": "^3.2.0",
+        "angular-animate": "^1.4.0",
+        "angular-cookies": "^1.4.0",
+        "angular-resource": "^1.4.0",
+        "angular-route": "^1.4.0",
+        "angular-sanitize": "^1.4.0",
+        "angular-touch": "^1.4.0",
+        "jquery-ui": "~1.12.0",
+        "ngtweet": "^0.6.1",
+        "angular-google-maps": "^2.3.3",
+        "magnific-popup": "^1.1.0"
+    },
+    "resolutions": {
+        "angular": "^1.4.0"
+    },
+    "devDependencies": {
+        "angular-mocks": "^1.4.0"
+    },
+    "appPath": "app",
+    "moduleName": "didsBeerFestV2App",
+    "overrides": {
+        "bootstrap": {
+            "main": [
+                "less/bootstrap.less",
+                "dist/css/bootstrap.css",
+                "dist/js/bootstrap.js"
+            ]
+        }
     }
-  }
 }
