only build master

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,7 @@ deploy:
   github-token: $GITHUB_TOKEN  
   keep-history: true
   target-branch: builds
+# safelist
+branches:
+  only:
+  - master
